--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -19,8 +19,8 @@
         <!-- Imagem de Fundo -->
         <ImageView
             android:id="@+id/backgroundImageView"
-            android:layout_width="336dp"
-            android:layout_height="186dp"
+            android:layout_width="280dp"
+            android:layout_height="250dp"
             android:contentDescription="Background Image"
             android:scaleType="centerCrop"
             android:src="@drawable/bolastopo" />
@@ -35,17 +35,15 @@
             android:src="@drawable/logo" />
     </FrameLayout>
 
-    <!-- Endereço de Email -->
-
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="40dp"
         android:text="Registar"
         android:textColor="@android:color/black"
-        android:textSize="50sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/frameLayout" />
@@ -54,18 +52,19 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="292dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="20dp"
         android:text="Endereço de Email"
         android:textColor="#616161"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
+    <!-- Endereço de Email -->
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="382dp"
-        android:layout_height="35dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="25dp"
@@ -77,24 +76,23 @@
         app:layout_constraintTop_toBottomOf="@id/email"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <!-- Palavra-Passe -->
-
     <TextView
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="292dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="20dp"
         android:text="Palavra-Passe"
         android:textColor="#616161"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
+    <!-- Palavra-Passe -->
     <EditText
         android:id="@+id/passwordEditText"
-        android:layout_width="388dp"
-        android:layout_height="39dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="25dp"
@@ -106,36 +104,35 @@
         app:layout_constraintTop_toBottomOf="@id/password" />
 
     <!-- Botão Registar -->
-
-    <!-- Botão Entrar -->
-
-
-    <!-- Constraint para alinhar os elementos -->
-
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="275dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="315dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="30dp"
+        android:drawableEnd="@drawable/seta"
         android:text="Registar"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@id/loginButton"
+        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
 
+    <!-- Botão Entrar -->
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="275dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="315dp"
+        android:layout_height="72dp"
+        android:layout_marginTop="8dp"
+        android:drawableEnd="@drawable/seta"
         android:text="Entrar"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/registerButton"
-        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/registerButton" />
 
+
+    <!-- Constraint para alinhar os elementos -->
     <View
         android:id="@+id/parentEnd"
         android:layout_width="0dp"
