--- a/app/src/main/res/layout-land/activity_slide1.xml
+++ b/app/src/main/res/layout-land/activity_slide1.xml
@@ -15,49 +15,38 @@
 
         <!-- Adicione aqui os elementos do seu layout -->
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="255dp"
+            android:layout_height="245dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="58dp"
+            android:layout_marginBottom="24dp"
             android:src="@drawable/logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Nesta aplicação vais poder "
+            android:text="Bem-Vindo"
+            android:textSize="30sp"
             android:textColor="@android:color/black"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginBottom="34dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="agendar e rever as suas"
-            android:textSize="18sp"
+            android:text="A sua aplicação de registo das"
+            android:textSize="25sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"/>
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="queimadas e comunicar com a"
+            android:text="vossas queimadas"
+            android:textSize="25sp"
             android:textColor="@android:color/black"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sua Câmara Municipal"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="135dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,14 +58,14 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/ball_white"
+                android:src="@drawable/ball_black"
                 android:layout_margin="20dp"/>
 
             <!-- Bola cinza 1 -->
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/ball_black"
+                android:src="@drawable/ball_white"
                 android:layout_margin="20dp"/>
 
             <!-- Bola cinza 2 -->
@@ -87,6 +76,10 @@
                 android:layout_margin="20dp"/>
         </LinearLayout>
 
+
+
+
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
