--- a/app/src/main/res/layout-land/activity_criarqueimada.xml
+++ b/app/src/main/res/layout-land/activity_criarqueimada.xml
@@ -1,51 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!-- Header com fundo de gradiente -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="113dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/tab"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Ícone de Menu -->
         <ImageView
             android:id="@+id/menu_icon"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignParentStart="true"
+            android:src="@drawable/setaback"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
-            android:src="@drawable/setaback" />
+            android:layout_marginTop="40dp"/>
 
         <!-- Foto do Perfil do Usuário -->
         <ImageView
             android:id="@+id/profile_picture"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="22dp"
-            android:background="@drawable/profile"
             android:src="@drawable/profile"
             android:scaleType="centerCrop"
             android:clipToOutline="true"
-            android:layout_marginBottom="8dp"/>
-    </RelativeLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="22dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Lista de itens -->
     <ScrollView
         android:id="@+id/scroll_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_below="@id/header"
-        android:layout_above="@id/bottom_navigation"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,7 +59,7 @@
             android:orientation="vertical">
 
             <!-- Localização -->
-            <RelativeLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
@@ -64,15 +70,18 @@
                     android:layout_height="wrap_content"
                     android:text="Localização"
                     android:textSize="18sp"
-                    android:layout_marginBottom="8dp"/> <!-- Adicionando margem inferior -->
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <!-- Linha preta -->
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@android:color/black"
-                    android:layout_below="@id/localizacaoTextView"
-                    android:layout_marginTop="8dp"/> <!-- Adicionando margem superior -->
+                    app:layout_constraintTop_toBottomOf="@id/localizacaoTextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp"/>
 
                 <!-- Ícone -->
                 <ImageView
@@ -80,13 +89,13 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/localizacao"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-            <!-- Localização -->
-            <RelativeLayout
+            <!-- Coordenadas -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
@@ -97,15 +106,18 @@
                     android:layout_height="wrap_content"
                     android:text="Coordenadas"
                     android:textSize="18sp"
-                    android:layout_marginBottom="8dp"/>
-
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <!-- Linha preta -->
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@android:color/black"
-                    android:layout_below="@id/coordenadasTextView"/>
+                    app:layout_constraintTop_toBottomOf="@id/coordenadasTextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp"/>
 
                 <!-- Ícone -->
                 <ImageView
@@ -113,12 +125,13 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/coordenadas"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- Localização -->
-            <RelativeLayout
+            <!-- Tipo -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
@@ -129,14 +142,18 @@
                     android:layout_height="wrap_content"
                     android:text="Tipo"
                     android:textSize="18sp"
-                    android:layout_marginBottom="8dp"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <!-- Linha preta -->
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@android:color/black"
-                    android:layout_below="@id/tipoTextView"/>
+                    app:layout_constraintTop_toBottomOf="@id/tipoTextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp"/>
 
                 <!-- Ícone -->
                 <ImageView
@@ -144,12 +161,13 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/localizacao"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- Localização -->
-            <RelativeLayout
+            <!-- Data de Realização -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
@@ -160,14 +178,18 @@
                     android:layout_height="wrap_content"
                     android:text="Data De Realização"
                     android:textSize="18sp"
-                    android:layout_marginBottom="8dp"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <!-- Linha preta -->
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@android:color/black"
-                    android:layout_below="@id/dataTextView"/>
+                    app:layout_constraintTop_toBottomOf="@id/dataTextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp"/>
 
                 <!-- Ícone -->
                 <ImageView
@@ -175,14 +197,15 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/data"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- Data de Pedido -->
 
-
-            <!-- Localização -->
-            <RelativeLayout
+            <!-- Motivo -->
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp">
@@ -193,14 +216,18 @@
                     android:layout_height="wrap_content"
                     android:text="Motivo"
                     android:textSize="18sp"
-                    android:layout_marginBottom="8dp"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <!-- Linha preta -->
                 <View
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:background="@android:color/black"
-                    android:layout_below="@id/MotivoTextView"/>
+                    app:layout_constraintTop_toBottomOf="@id/MotivoTextView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp"/>
 
                 <!-- Ícone -->
                 <ImageView
@@ -208,42 +235,29 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/motivo"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </RelativeLayout>
+            <!-- Observação -->
 
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".MainActivity">
+            <!-- Estado -->
 
-                <!-- Botão "Solicitar Aprovação" -->
-                <Button
-                    android:id="@+id/solicitar_aprovacao_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Solicitar Aprovação"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="350dp"/>
-
-            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 
-
-
     <!-- Navegação Inferior -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="92dp"
-        android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:elevation="8dp">
 
         <!-- Ícone de Notificação -->
@@ -251,10 +265,11 @@
             android:id="@+id/notification_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="16dp"
             android:src="@drawable/ic_notification"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="16dp"/>
 
         <!-- Ícone de Fogo (Centro) -->
         <ImageView
@@ -262,17 +277,21 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_fire"
-            android:layout_centerInParent="true"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <!-- Ícone de Perfil -->
         <ImageView
             android:id="@+id/profile_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="16dp"
             android:src="@drawable/ic_profile"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
-    </RelativeLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="16dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
