--- a/app/src/main/res/layout-land/activity_esquecerpalavrapasse.xml
+++ b/app/src/main/res/layout-land/activity_esquecerpalavrapasse.xml
@@ -35,14 +35,12 @@
             android:src="@drawable/logo" />
     </FrameLayout>
 
-    <!-- Endereço de Email -->
-
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="288dp"
-        android:layout_marginTop="-50dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="40dp"
         android:text="Esqueci-me da minha palavra-passe"
         android:textColor="@android:color/black"
         android:textSize="18sp"
@@ -54,49 +52,47 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="296dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="20dp"
         android:text="Endereço de Email"
         android:textColor="#616161"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
-    <!-- Botão Enviar -->
+    <!-- Endereço de Email -->
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="346dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="15dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="25dp"
         android:drawableEnd="@drawable/email"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email" />
 
-    <!-- Constraint para alinhar os elementos -->
+    <!-- Botão Enviar -->
     <Button
         android:id="@+id/sendButton"
-        android:layout_width="300dp"
+        android:layout_width="315dp"
         android:layout_height="72dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="30dp"
         android:text="Enviar"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
+    <!-- Constraint para alinhar os elementos -->
     <View
         android:id="@+id/parentEnd"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sendButton"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
